Fix vertical alignment of badge

--- a/static/sass/_pattern_cube-table.scss
+++ b/static/sass/_pattern_cube-table.scss
@@ -110,11 +110,15 @@
     padding-left: 0;
     padding-right: 0;
   }
-}
-
-.p-table--cube__badge {
   @media only screen and (max-width: $breakpoint-medium) {
-    margin-top: -0.4rem !important;
+    align-items: center !important;
+    display: grid;
+    justify-content: flex-start;
+    padding-top: 0 !important;
+
+    > img {
+      align-self: center !important;
+    }
   }
 }
 
